--- a/package.json
+++ b/package.json
@@ -59,5 +59,10 @@
       "pre-commit": "pretty-quick --staged"
     }
   },
-  "packageManager": "yarn@1.22.19"
+  "packageManager": "yarn@1.22.19",
+  "dependencies": {
+    "@testing-library/dom": "^7.21.4",
+    "react": "^16.0.0",
+    "ts-node": "^3.3.0"
+  }
 }
