--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,7 +17,8 @@ jobs:
     # if: "contains(github.ref, '-v')"
     services:
       mysql:
-        image: mysql:5.7
+        #image: mysql:5.7
+        image: mysql:8.0.32
         ports:
           - 3306:3306
         env:
