--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,8 @@
 version: '3'
 services:
   db:
-    image: mysql:5.7.41
+    #image: mysql:5.7.41
+    image: mysql:8.0.32
     networks:
       - voice-web
     container_name: db
