--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "eslint-plugin-react": "7.29.4",
     "eslint-plugin-react-hooks": "4.3.0",
     "husky": "7.0.4",
-    "mysql2": "2.3.3",
+    "mysql2": "^3.2.0",
     "node-fetch": "2.6.9",
     "prettier": "2.6.0",
     "pretty-quick": "3.1.3",
@@ -62,6 +62,7 @@
   "packageManager": "yarn@1.22.19",
   "dependencies": {
     "@testing-library/dom": "^7.21.4",
+    "mysql": "^2.18.1",
     "react": "^16.0.0",
     "ts-node": "^3.3.0"
   }
