--- a/config.json
+++ b/config.json
@@ -4,5 +4,5 @@
   "MYSQLHOST": "127.0.0.1",
   "BUCKET_NAME": "voice-web-sergio",
   "AWS_REGION": "EE. UU. Este (Ohio) us-east-2",
-  "REDIS_URL": "redis"
+  "REDIS_URL": "redis://localhost:6379"
 }
