--- a/.env
+++ b/.env
@@ -7,4 +7,4 @@ CV_PROD="false"
 CV_IMPORT_SENTENCES="false"
 CV_EMAIL_USERNAME_FROM="commonvoice@mozilla.com"
 CV_EMAIL_USERNAME_TO="commonvoice@mozilla.com"
-CV_REDIS_URL='redis://localhost:6379'
+CV_REDIS_URL='redis'
