--- a/config.json
+++ b/config.json
@@ -3,6 +3,5 @@
   "MYSQLDBNAME": "voice",
   "MYSQLHOST": "127.0.0.1",
   "BUCKET_NAME": "voice-web-sergio",
-  "AWS_REGION": "EE. UU. Este (Ohio) us-east-2",
-  "REDIS_URL": "redis"
+  "AWS_REGION": "EE. UU. Este (Ohio) us-east-2"
 }
