--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ xcuserdata/
 .ignored_files/
 .DS_Store
 .vscode/
+.env
+.env-local-docker
+config.json
 ZZidea
 docker-compose.override.yml
 yarn-error.log
