--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ CV_MYSQLHOST="127.0.0.1"
 CV_S3_CONFIG='{"endpoint": "http://s3proxy:80", "accessKeyId": "local-identity", "secretAccessKey": "local-credential", "s3ForcePathStyle": true}'
 CV_S3_LOCAL_DEVELOPMENT_ENDPOINT="http://localhost:9001"
 CV_ENVIRONMENT="local"
-CV_PROD="false"
-CV_IMPORT_SENTENCES="false"
+CV_PROD="true"
+CV_IMPORT_SENTENCES="true"
 CV_EMAIL_USERNAME_FROM="commonvoice@mozilla.com"
 CV_EMAIL_USERNAME_TO="commonvoice@mozilla.com"
 CV_REDIS_URL='redis://localhost:6379'
