--- a/config.json
+++ b/config.json
@@ -3,5 +3,9 @@
   "MYSQLDBNAME": "voice",
   "MYSQLHOST": "127.0.0.1",
   "BUCKET_NAME": "voice-web-sergio",
-  "AWS_REGION": "EE. UU. Este (Ohio) us-east-2"
+  "AWS_REGION": "us-east-2",
+  "DB_ROOT_USER": "root",
+  "DB_ROOT_PASS": "125342a",
+  "MYSQLUSER": "prueba",
+  "MYSQLPASS": "125442a"
 }
